Loads of changes, searches now working in its most basic form. -JQuery and JQueryUI implemented. -Started work on a basic 'autocomplete' feature on the main page. This will be implemented on a global searchbar.

--- a/css/css.css
+++ b/css/css.css
@@ -15,7 +15,6 @@ width: 984px;
 margin-left: auto;
 margin-right: auto;
 height: 500px;
-border: 1px black solid;
 }
 
 .banner
@@ -89,4 +88,11 @@ margin: 0 auto;
 {
 margin-bottom: 0;
 margin-top: 5px;
+}
+
+.item
+{
+position: relative;
+width: 800px;
+background-color: red;
 }
